[update] 目安線の表示機能を追加、ツールバーにコマンドを追加、一部のコマンドのアイコンを変更、オプション画面内の項目の配置を変更

--- a/MyPad/Views/Regions/MenuBarView.xaml
+++ b/MyPad/Views/Regions/MenuBarView.xaml
@@ -53,7 +53,7 @@
                       HeaderStringFormat="{}{0}..."
                       InputGestureText="Ctrl+Shift+S">
                 <MenuItem.Icon>
-                    <mi:Material Kind="ContentSaveSettings"/>
+                    <mi:Material Kind="ContentSaveEdit"/>
                 </MenuItem.Icon>
             </MenuItem>
             <MenuItem Command="{Binding SaveAllCommand, Mode=OneTime}"
