--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -157,26 +157,33 @@
                                 <Border Height="10"/>
 
                                 <StackPanel>
-                                    <CheckBox IsChecked="{Binding HideCursorWhileTyping, Mode=TwoWay}"                   Content="{le:Loc LabelText_HideCursorWhileTyping}"/>
-                                    <CheckBox IsChecked="{Binding CutCopyWholeLine, Mode=TwoWay}"                        Content="{le:Loc LabelText_EnableCutCopyWholeLine}"/>
-                                    <CheckBox IsChecked="{Binding WordWrap, Mode=TwoWay}"                                Content="{le:Loc LabelText_EnableWordWrap}"/>
-                                    <CheckBox IsChecked="{Binding ConvertTabsToSpaces, Mode=TwoWay}"                     Content="{le:Loc LabelText_ConvertTabsToSpaces}"/>
-                                    <CheckBox IsChecked="{Binding RequireControlModifierForHyperlinkClick, Mode=TwoWay}" Content="{le:Loc LabelText_RequireControlModifierForHyperlinkClick}"/>
+                                    <StackPanel>
+                                        <CheckBox IsChecked="{Binding ShowColumnRuler, Mode=TwoWay}" Content="{le:Loc LabelText_ShowColumnRuler}"/>
+                                        <Grid ge:GridEx.RowDefinition="Auto" ge:GridEx.ColumnDefinition="Auto, 10, Auto" Margin="30 0 0 0">
+                                            <Label           Grid.Row="0" Grid.Column="0" Content="{le:Loc Label_ColumnRulerPosition}"/>
+                                            <m:NumericUpDown Grid.Row="0" Grid.Column="2" Value="{Binding ColumnRulerPosition, Mode=TwoWay}" Minimum="1" Maximum="10000" MinWidth="100"/>
+                                        </Grid>
+                                    </StackPanel>
+                                    <CheckBox IsChecked="{Binding WordWrap, Mode=TwoWay}"            Content="{le:Loc LabelText_EnableWordWrap}"/>
+                                    <CheckBox IsChecked="{Binding ConvertTabsToSpaces, Mode=TwoWay}" Content="{le:Loc LabelText_ConvertTabsToSpaces}"/>
                                 </StackPanel>
                             </StackPanel>
 
                             <StackPanel ge:ResponsiveGrid.XS="12" ge:ResponsiveGrid.SM="6" Margin="5">
                                 <StackPanel>
-                                    <CheckBox IsChecked="{Binding EnableImeSupport, Mode=TwoWay}"           Content="{le:Loc LabelText_EnableImeSupport}"/>
-                                    <CheckBox IsChecked="{Binding EnableFoldings, Mode=TwoWay}"             Content="{le:Loc LabelText_EnableFoldings}"/>
-                                    <CheckBox IsChecked="{Binding EnableAutoCompletion, Mode=TwoWay}"       Content="{le:Loc LabelText_EnableAutoCompletion}"/>
-                                    <CheckBox IsChecked="{Binding EnableTextDragDrop, Mode=TwoWay}"         Content="{le:Loc LabelText_EnableTextDragDrop}"/>
-                                    <CheckBox IsChecked="{Binding EnableRectangularSelection, Mode=TwoWay}" Content="{le:Loc LabelText_EnableRectangularSelection}"/>
-                                    <CheckBox IsChecked="{Binding EnableVirtualSpace, Mode=TwoWay}"         Content="{le:Loc LabelText_EnableVirtualSpace}"/>
-                                    <CheckBox IsChecked="{Binding EnableHyperlinks, Mode=TwoWay}"           Content="{le:Loc LabelText_EnableHyperlinks}"/>
-                                    <CheckBox IsChecked="{Binding EnableEmailHyperlinks, Mode=TwoWay}"      Content="{le:Loc LabelText_EnableEmailHyperlinks}"/>
-                                    <CheckBox IsChecked="{Binding AllowScrollBelowDocument, Mode=TwoWay}"   Content="{le:Loc LabelText_AllowScrollBelowDocument}"/>
-                                    <CheckBox IsChecked="{Binding AllowToggleOverstrikeMode, Mode=TwoWay}"  Content="{le:Loc LabelText_AllowToggleOverstrikeMode}"/>
+                                    <CheckBox IsChecked="{Binding EnableFoldings, Mode=TwoWay}"                          Content="{le:Loc LabelText_EnableFoldings}"/>
+                                    <CheckBox IsChecked="{Binding EnableAutoCompletion, Mode=TwoWay}"                    Content="{le:Loc LabelText_EnableAutoCompletion}"/>
+                                    <CheckBox IsChecked="{Binding EnableVirtualSpace, Mode=TwoWay}"                      Content="{le:Loc LabelText_EnableVirtualSpace}"/>
+                                    <CheckBox IsChecked="{Binding EnableRectangularSelection, Mode=TwoWay}"              Content="{le:Loc LabelText_EnableRectangularSelection}"/>
+                                    <CheckBox IsChecked="{Binding EnableTextDragDrop, Mode=TwoWay}"                      Content="{le:Loc LabelText_EnableTextDragDrop}"/>
+                                    <CheckBox IsChecked="{Binding EnableImeSupport, Mode=TwoWay}"                        Content="{le:Loc LabelText_EnableImeSupport}"/>
+                                    <CheckBox IsChecked="{Binding EnableHyperlinks, Mode=TwoWay}"                        Content="{le:Loc LabelText_EnableHyperlinks}"/>
+                                    <CheckBox IsChecked="{Binding EnableEmailHyperlinks, Mode=TwoWay}"                   Content="{le:Loc LabelText_EnableEmailHyperlinks}"/>
+                                    <CheckBox IsChecked="{Binding RequireControlModifierForHyperlinkClick, Mode=TwoWay}" Content="{le:Loc LabelText_RequireControlModifierForHyperlinkClick}"/>
+                                    <CheckBox IsChecked="{Binding HideCursorWhileTyping, Mode=TwoWay}"                   Content="{le:Loc LabelText_HideCursorWhileTyping}"/>
+                                    <CheckBox IsChecked="{Binding CutCopyWholeLine, Mode=TwoWay}"                        Content="{le:Loc LabelText_EnableCutCopyWholeLine}"/>
+                                    <CheckBox IsChecked="{Binding AllowToggleOverstrikeMode, Mode=TwoWay}"               Content="{le:Loc LabelText_AllowToggleOverstrikeMode}"/>
+                                    <CheckBox IsChecked="{Binding AllowScrollBelowDocument, Mode=TwoWay}"                Content="{le:Loc LabelText_AllowScrollBelowDocument}"/>
                                 </StackPanel>
                             </StackPanel>
                         </ge:ResponsiveGrid>
