--- a/MyPad/Views/Regions/ToolBarView.xaml
+++ b/MyPad/Views/Regions/ToolBarView.xaml
@@ -21,6 +21,9 @@
             <Style x:Key="{x:Static ToolBar.ButtonStyleKey}" TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button.ToolBar}">
                 <Setter Property="Padding" Value="3"/>
             </Style>
+            <Style x:Key="{x:Static ToolBar.ToggleButtonStyleKey}" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource MahApps.Styles.ToggleButton.ToolBar}">
+                <Setter Property="Padding" Value="3"/>
+            </Style>
             <Style TargetType="{x:Type m:DropDownButton}" BasedOn="{StaticResource Default.DropDownButton}">
                 <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Transparent}"/>
                 <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Transparent}"/>
@@ -41,7 +44,9 @@
                 ToolTip="{le:Loc Command_Save}">
             <mi:Material Kind="ContentSave"/>
         </Button>
+        
         <Separator Margin="5"/>
+        
         <Button Command="Undo" 
                 ToolTip="{le:Loc Command_Undo}">
             <mi:Modern Kind="UndoCurve"/>
@@ -50,7 +55,9 @@
                 ToolTip="{le:Loc Command_Redo}">
             <mi:Modern Kind="RedoCurve"/>
         </Button>
+        
         <Separator Margin="5"/>
+        
         <Button Command="Cut"
                 ToolTip="{le:Loc Command_Cut}">
             <mi:Modern Kind="Scissor"/>
@@ -71,7 +78,9 @@
                 ToolTip="{le:Loc Command_SelectAll}">
             <mi:Modern Kind="CursorDefault"/>
         </Button>
+        
         <Separator Margin="5"/>
+
         <Button Command="Find"
                 ToolTip="{le:Loc Command_Find}">
             <mi:Material Kind="Magnify"/>
@@ -80,7 +89,9 @@
                 ToolTip="{le:Loc Command_Replace}">
             <mi:Material Kind="FindReplace"/>
         </Button>
+        
         <Separator Margin="5"/>
+        
         <m:DropDownButton ToolTip="{le:Loc Command_Formatting}">
             <m:DropDownButton.Icon>
                 <mi:Modern Kind="PageEdit"/>
@@ -104,6 +115,21 @@
                           Header="{le:Loc Command_ConvertSpacesToTabs}"/>
             </m:DropDownButton.Items>
         </m:DropDownButton>
+        
+        <Separator Margin="5"/>
+
+        <ToggleButton IsChecked="{Binding SettingsService.TextEditor.ShowColumnRuler, Mode=TwoWay}"
+                      ToolTip="{le:Loc LabelText_ShowColumnRuler}">
+            <mi:Material Kind="FlipHorizontal"/>
+        </ToggleButton>
+        <ToggleButton IsChecked="{Binding SettingsService.TextEditor.WordWrap, Mode=TwoWay}"
+                      ToolTip="{le:Loc LabelText_EnableWordWrap}">
+            <mi:Material Kind="Wrap"/>
+        </ToggleButton>
+        <ToggleButton IsChecked="{Binding SettingsService.TextEditor.ConvertTabsToSpaces, Mode=TwoWay}"
+                      ToolTip="{le:Loc LabelText_ConvertTabsToSpaces}">
+            <mi:Material Kind="KeyboardSpace"/>
+        </ToggleButton>
     </ToolBar>
     
 </UserControl>
