--- a/MyPad/Views/Styles/Controls/AvalonEdit.xaml
+++ b/MyPad/Views/Styles/Controls/AvalonEdit.xaml
@@ -132,7 +132,7 @@
                             <ToggleButton Grid.Row="0" Grid.Column="7" 
                                           IsChecked="{Binding MatchCase, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                           ToolTip="{Binding Localization.MatchCaseText, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}">
-                                <mi:Material Kind="CaseSensitiveAlt"/>
+                                <mi:Material Kind="FormatLetterCase"/>
                             </ToggleButton>
                             <ToggleButton Grid.Row="0" Grid.Column="8"
                                           IsChecked="{Binding UseRegex, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
