--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -347,7 +347,7 @@
                                 </MenuItem>
                             </ContextMenu>
                         </Grid.ContextMenu>
-                        <Button Grid.Column="0" Command="{x:Static dr:TabablzControl.AddItemCommand}" Height="20" Width="20" Padding="0" Background="Transparent" BorderBrush="Transparent" Focusable="False">
+                        <Button Grid.Column="0" Command="{x:Static dr:TabablzControl.AddItemCommand}" ToolTip="{le:Loc Command_New}" Height="20" Width="20" Padding="0" Background="Transparent" BorderBrush="Transparent" Focusable="False">
                             <mi:PackIconMaterial Kind="Plus" Height="12" Width="12" Foreground="{DynamicResource MahApps.Brushes.Gray5}"/>
                         </Button>
                         <Border Grid.Column="1" VerticalAlignment="Stretch" Background="Transparent"/>
