--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -78,14 +78,16 @@
         <KeyBinding Command="{Binding ExitApplicationCommand,      Mode=OneTime}" Key="F4"       Modifiers="Ctrl+Alt"/>
         <KeyBinding Command="{Binding CloseCommand,                Mode=OneTime}" Key="F4"       Modifiers="Ctrl"/>
         <KeyBinding Command="{Binding CloseAllCommand,             Mode=OneTime}" Key="F4"       Modifiers="Ctrl+Shift"/>
+        <KeyBinding Command="{Binding CloseOtherCommand,           Mode=OneTime}" Key="F4"       Modifiers="Shift"/>
         <KeyBinding Command="{Binding PrintCommand,                Mode=OneTime}" Key="P"        Modifiers="Ctrl"/>
         <KeyBinding Command="{Binding PrintPreviewCommand,         Mode=OneTime}" Key="P"        Modifiers="Ctrl+Shift"/>
-        <KeyBinding Command="{Binding GoToLineCommand,             Mode=OneTime}" Key="G"        Modifiers="Ctrl"/>
         <KeyBinding Command="{Binding OptionCommand,               Mode=OneTime}" Key="OemComma" Modifiers="Ctrl"/>
+        <KeyBinding Command="{Binding AboutCommand,                Mode=OneTime}" Key="F1"       Modifiers="Ctrl+Shift"/>
+        <KeyBinding Command="{Binding GoToLineCommand,             Mode=OneTime}" Key="G"        Modifiers="Ctrl"/>
         <KeyBinding Command="{Binding ChangeEncodingCommand,       Mode=OneTime}" Key="E"        Modifiers="Ctrl"/>
         <KeyBinding Command="{Binding ChangeSyntaxCommand,         Mode=OneTime}" Key="M"        Modifiers="Ctrl"/>
-        <KeyBinding Command="{Binding DiffCommand,                 Mode=OneTime}" Key="D"        Modifiers="Ctrl+Shift"/>
-        <KeyBinding Command="{Binding DiffUnmodifiedCommand,       Mode=OneTime}" Key="D"        Modifiers="Ctrl+Alt"/>
+        <KeyBinding Command="{Binding DiffCommand,                 Mode=OneTime}" Key="D"        Modifiers="Ctrl"/>
+        <KeyBinding Command="{Binding DiffUnmodifiedCommand,       Mode=OneTime}" Key="D"        Modifiers="Ctrl+Shift"/>
         <KeyBinding Command="{Binding SwitchFullScreenModeCommand, Mode=OneTime, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" Key="F11"/>
     </Window.InputBindings>
 
@@ -396,7 +398,7 @@
                                 <mi:Material Kind="LayersOff"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Command="{Binding CloseOtherCommand, Mode=OneTime}" Header="{le:Loc Command_CloseOther}">
+                        <MenuItem Command="{Binding CloseOtherCommand, Mode=OneTime}" Header="{le:Loc Command_CloseOther}" InputGestureText="Shift+F4">
                             <MenuItem.Icon>
                                 <mi:Material Kind="LayersRemove"/>
                             </MenuItem.Icon>
@@ -413,7 +415,7 @@
                             </MenuItem.Icon>
                         </MenuItem>
                         <Separator/>
-                        <MenuItem Command="{Binding DiffUnmodifiedCommand, Mode=OneTime}" Header="{le:Loc Command_DiffUnmodified}" HeaderStringFormat="{}{0}..." InputGestureText="Ctrl+Alt+D">
+                        <MenuItem Command="{Binding DiffUnmodifiedCommand, Mode=OneTime}" Header="{le:Loc Command_DiffUnmodified}" HeaderStringFormat="{}{0}..." InputGestureText="Ctrl+Shift+D">
                             <MenuItem.Icon>
                                 <mi:Modern Kind="ListAdd"/>
                             </MenuItem.Icon>
