--- a/MyPad/Views/Dialogs/ChangeLineDialog.xaml
+++ b/MyPad/Views/Dialogs/ChangeLineDialog.xaml
@@ -35,9 +35,9 @@
             <m:NumericUpDown x:Name="Line" Value="{Binding Line.Value, Mode=TwoWay}" Minimum="1" Maximum="{Binding MaxLine.Value, Mode=OneWay}" m:TextBoxHelper.Watermark="{le:Loc Label_LineMumber}" m:TextBoxHelper.UseFloatingWatermark="True" m:TextBoxHelper.SelectAllOnFocus="True"/>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="{le:Loc Command_OK}"     Command="{Binding OKCommand, Mode=Onetime}"/>
+            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{StaticResource Common.AccentButton}" MinWidth="80"/>
             <Border Width="10"/>
-            <Button Content="{le:Loc Command_Cancel}" Command="{Binding CancelCommand, Mode=Onetime}"/>
+            <Button Content="{le:Loc Command_Cancel}" Command="{Binding CancelCommand, Mode=Onetime}" MinWidth="80"/>
         </StackPanel>
     </Grid>
 
