--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -194,22 +194,12 @@
 
             <TabItem Header="{le:Loc Label_ConfigFile}">
                 <TabItem.Resources>
-                    <Style x:Key="IconDropDownButton" TargetType="{x:Type m:DropDownButton}" BasedOn="{StaticResource Default.DropDownButton}">
-                        <Setter Property="Margin" Value="0 5"/>
-                        <Setter Property="Padding" Value="0"/>
-                        <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"/>
-                    </Style>
                     <Style x:Key="IconButton" TargetType="{x:Type Button}" BasedOn="{StaticResource Default.Button}">
                         <Setter Property="Margin" Value="0 5"/>
                         <Setter Property="Padding" Value="0"/>
                         <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"/>
                     </Style>
-                    <Style x:Key="IconAccentButton" TargetType="{x:Type Button}" BasedOn="{StaticResource Common.AccentButton}">
-                        <Setter Property="Margin" Value="0 5"/>
-                        <Setter Property="Padding" Value="0"/>
-                        <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"/>
-                    </Style>
-                    <Style x:Key="IconDangerButton" TargetType="{x:Type Button}" BasedOn="{StaticResource Common.DangerButton}">
+                    <Style x:Key="IconDropDownButton" TargetType="{x:Type m:DropDownButton}" BasedOn="{StaticResource Default.DropDownButton}">
                         <Setter Property="Margin" Value="0 5"/>
                         <Setter Property="Padding" Value="0"/>
                         <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"/>
@@ -218,7 +208,7 @@
                 <ScrollViewer>
                     <Grid ge:GridEx.ColumnDefinition="Auto, *, 5, Auto, Auto" ge:GridEx.RowDefinition="Auto, Auto, Auto">
                         <Label   Grid.Row="0" Grid.Column="0" Content="{le:Loc Label_ExecutionDirectory}"/>
-                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding ProductInfo.Working, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding ProductInfo.Working, Mode=OneWay}" m:TextBoxHelper.SelectAllOnFocus="True" IsReadOnly="True" IsTabStop="False"/>
                         <Button  Grid.Row="0" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="Click">
@@ -229,7 +219,7 @@
                         </Button>
 
                         <Label   Grid.Row="1" Grid.Column="0" Content="{le:Loc Label_TempDirectory}"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding ProductInfo.Temporary, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding ProductInfo.Temporary, Mode=OneWay}" m:TextBoxHelper.SelectAllOnFocus="True" IsReadOnly="True" IsTabStop="False"/>
                         <Button  Grid.Row="1" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="Click">
@@ -240,7 +230,7 @@
                         </Button>
 
                         <Label   Grid.Row="2" Grid.Column="0" Content="{le:Loc Label_AppDataDirectory}"/>
-                        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ProductInfo.Roaming, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ProductInfo.Roaming, Mode=OneWay}" m:TextBoxHelper.SelectAllOnFocus="True" IsReadOnly="True" IsTabStop="False"/>
                         <Button  Grid.Row="2" Grid.Column="3" Command="{Binding OpenAppDataDirectoryCommand, Mode=OneTime}" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}" BorderThickness="1 1 0 1">
                             <mi:Modern Kind="FolderOpen"/>
                         </Button>
