--- a/MyPad/Views/Dialogs/ChangeLineDialog.xaml
+++ b/MyPad/Views/Dialogs/ChangeLineDialog.xaml
@@ -11,6 +11,7 @@
              xmlns:qc="http://QuickConverter.CodePlex.com/"
              xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
+             xmlns:controls="clr-namespace:MyPad.Views.Controls"
              mc:Ignorable="d"
              p:ViewModelLocator.AutoWireViewModel="True"
              Loaded="Dialog_Loaded">
@@ -32,7 +33,14 @@
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
         <Grid Grid.Row="0" VerticalAlignment="Center">
-            <m:NumericUpDown x:Name="Line" Value="{Binding Line.Value, Mode=TwoWay}" Minimum="1" Maximum="{Binding MaxLine.Value, Mode=OneWay}" m:TextBoxHelper.Watermark="{le:Loc Label_LineMumber}" m:TextBoxHelper.UseFloatingWatermark="True" m:TextBoxHelper.SelectAllOnFocus="True"/>
+            <controls:NumericUpDownEx x:Name="Line"
+                                      Value="{Binding Line.Value, Mode=TwoWay}"
+                                      Minimum="1"
+                                      Maximum="{Binding MaxLine.Value, Mode=OneWay}"
+                                      m:TextBoxHelper.Watermark="{le:Loc Label_LineMumber}" 
+                                      m:TextBoxHelper.UseFloatingWatermark="True"
+                                      m:TextBoxHelper.SelectAllOnFocus="True"
+                                      ReverseOnMouseWheel="True"/>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{StaticResource Common.AccentButton}" MinWidth="80"/>
